--- a/sound.html
+++ b/sound.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -15,7 +14,7 @@
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
       }
     </style>
-    <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/bootstrap-responsive.css" rel="stylesheet">
     <link rel="shortcut icon" href="bootstrap/ico/favicon.ico">
   </head>
   <body>
@@ -212,24 +211,23 @@
 		}
     </script>
     
-    <script src="bootstrap/js/bootstrap-button.js"></script>
-    <script type="text/javascript" src="app/js/ACFIRFilter.js"></script>
-    <script type="text/javascript" src="app/js/ACAAFilter.js"></script> 
-    <script type="text/javascript" src="app/js/ACSpectrum.js"></script>    
-    <script type="text/javascript" src="app/js/ACFFT.js"></script>
-    <script type="text/javascript" src="app/js/SpectrumWorker.js"></script>
-    <script type="text/javascript" src="app/js/SpectrumDisplay.js"></script>
-    <script type="text/javascript" src="app/js/audioplayback.js"></script>
-    <script type="text/javascript" src="app/js/filedropbox.js"></script>
-    <script type="text/javascript" src="app/js/fft.js"></script>
-    <script type="text/javascript" src="app/js/audioLayerControl.js"></script>
-    <script type="text/javascript" src="app/js/audiosequence.js"></script>
-    <script type="text/javascript" src="app/js/AudioSequenceEditor.js"></script>
-    <script type="text/javascript" src="app/js/mathutilities.js"></script>
-    <script type="text/javascript" src="app/js/wavetrack.js"></script>
-    <script type="text/javascript" src="app/js/binarytoolkit.js"></script>
-    <script type="text/javascript" src="app/js/filesystemutility.js"></script>
-    <script type="text/javascript" src="app/js/editorapp.js"></script>
+    <script type="text/javascript" src="ACFIRFilter.js"></script>
+    <script type="text/javascript" src="ACAAFilter.js"></script> 
+    <script type="text/javascript" src="ACSpectrum.js"></script>    
+    <script type="text/javascript" src="ACFFT.js"></script>
+    <script type="text/javascript" src="SpectrumWorker.js"></script>
+    <script type="text/javascript" src="SpectrumDisplay.js"></script>
+    <script type="text/javascript" src="audioplayback.js"></script>
+    <script type="text/javascript" src="filedropbox.js"></script>
+    <script type="text/javascript" src="fft.js"></script>
+    <script type="text/javascript" src="audioLayerControl.js"></script>
+    <script type="text/javascript" src="audiosequence.js"></script>
+    <script type="text/javascript" src="AudioSequenceEditor.js"></script>
+    <script type="text/javascript" src="mathutilities.js"></script>
+    <script type="text/javascript" src="wavetrack.js"></script>
+    <script type="text/javascript" src="binarytoolkit.js"></script>
+    <script type="text/javascript" src="filesystemutility.js"></script>
+    <script type="text/javascript" src="editorapp.js"></script>
     
     <script type="text/javascript">
       $(window).load(function()
